<resources>
    <string name="app_name">TVShows</string>
    <string name="running">Running</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="end">End</string>
    <string name="all">All</string>
    <string name="favourite">Favourite</string>
    <string name="in_development">In development</string>
    <string name="error_load_tvshow">Error load data TvShow</string>
    <string name="no_result">No result</string>
    <string name="read_more">Read more</string>
    <string name="u2022">•</string>
    <string name="error_load_data">Error load data</string>
    <string name="website">Website</string>
    <string name="episode">Episode</string>
    <string name="started_on">Started on: </string>
    <string name="min"> Min</string>
    <string name="read_less">Read less</string>
    <string name="error">Error</string>
    <string name="remove_success">Remove from favourite success</string>
    <string name="add_success">Add to favourite success</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="hold_to_remove_tv_show_from_favourite">Hold to remove TV Show from favourite</string>
</resources>
